--- a/style.css
+++ b/style.css
@@ -11,12 +11,15 @@ body {
 .book {
     display:flex;
     flex-direction: column;
+    justify-content: space-between;
     width:300px;
     min-width: 200px;
     height: 400px;
-    border: 2px solid black;
+    border: 3px solid black;
     margin: 20px;
     padding: 10px;
+    background-color: rgb(224, 195, 142);
+    border-radius: 5px;
 }
 
 .book h3 {
@@ -28,4 +31,30 @@ body {
     height: 50px;
     background-color: rgb(110, 173, 214);
     font-size: 24px;
+}
+
+.book button {
+    color: white;
+    font-weight: 900;
+    height: 50px;
+    width: 150px;
+    border-radius: 15px;
+    align-self: center;
+    border-style: none;
+    border: 3px solid black
+
+}
+
+.remove-book {
+    background-color: rgb(190, 24, 24);
+    
+}
+
+.read-status {
+    background-color: rgb(87, 201, 87);
+   
+}
+
+.not-read-yet {
+    background-color: brown;
 }
